--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "studuapps",
+  "name": "unirev",
   "version": "1.0.0",
-  "description": "Stunting detection",
+  "description": "Uni Bandung",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "test": "node app.js",
+    "dev": "nodemon app.js",
+    "prod": "pm2 start app.js "
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/alfianyaqien/studuapps.git"
+    "url": "git+https://github.com/alfianyaqien/uni-rev-backend.git"
   },
   "keywords": [
     "nodejs",
@@ -18,21 +20,17 @@
   "author": "Alfian",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/alfianyaqien/studuapps/issues"
+    "url": "https://github.com/alfianyaqien/uni-rev-backend/issues"
   },
-  "homepage": "https://github.com/alfianyaqien/studuapps#readme",
+  "homepage": "https://github.com/alfianyaqien/uni-rev-backend#readme",
   "dependencies": {
-    "@google-cloud/storage": "^6.4.0",
-    "bcryptjs": "^2.4.3",
+    "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "dateformat": "^3.0.3",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
-    "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
-    "nodemon": "^2.0.19",
     "sequelize": "^6.20.1"
   }
 }
